# Mneno

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.superset/: config.json
docs/: README.md  docs.json  index.md  index.mdx  quickstart.mdx
docs/advanced/: evaluation.mdx  extraction.mdx  import-export.mdx  providers.mdx
docs/changelog/: overview.mdx
docs/concepts/: compaction.mdx  context-building.mdx  lifecycle.mdx  observability.mdx  scoring.mdx  sessions.mdx  storage.mdx
examples/: basic_usage.py
mneno/: __init__.py  client.py  models.py
mneno/cli/: __init__.py  app.py  config.py  output.py  version.py  workspace.py
mneno/compaction/: __init__.py  base.py  diff.py  engine.py  policies.py
mneno/conflicts/: __init__.py  detector.py  policies.py  reports.py  resolver.py
mneno/context/: __init__.py  budget.py  builder.py  (+3 more)
scripts/: check.sh  demo_cli.sh  format.sh  setup_dev.sh  teardown.sh  test.sh
tests/: test_cli_add.py  test_cli_commands.py  test_cli_config.py  test_cli_context.py  test_cli_recent.py  test_cli_search.py  test_cli_status.py  test_cli_workspace.py  test_compaction.py  test_conflicts.py  test_context.py  test_demo_cli.py  test_evaluation.py  test_extraction.py  test_hierarchy.py  test_import.py  test_io.py  test_models.py  test_observability.py  test_providers.py  test_reranking.py  test_scoring.py  test_semantic_retrieval.py  test_sessions.py  test_storage.py
(+60 files in other folders)
