[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "mneno"
version = "0.1.0"
description = "An anti-context-rot memory runtime for AI agents and AI applications."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Mneno contributors" },
]
keywords = ["ai", "agents", "memory", "context", "sdk"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2,<3",
  "typing-extensions>=4.9",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/lollopanta/mneno"
Issues = "https://github.com/lollopanta/mneno/issues"
Source = "https://github.com/lollopanta/mneno"

[tool.hatch.build.targets.wheel]
packages = ["mneno"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
packages = ["mneno"]
